--- a/default.properties
+++ b/default.properties
@@ -1,17 +1,17 @@
 #Saved
-#Tue Sep 17 14:48:24 EEST 2019
+#Wed Nov 27 15:37:30 EET 2019
 EnvType=dev
-CONTACTS=Julia
+CONTACTS=Oleg Nastagunin
 COMPANIES=
-LOGIN=olex.dyachuk@gmail.com
+LOGIN=bohdan.hrynchuk@fortegrp.com
 TITLE=
-PREV_HTML=20190917_144817.html
+PREV_HTML=20191127_152452.csv
 Headless=false
-ChromeDriverVersion=76.0.3809.126
-PASS=WtkmLink1\!
+PASS=Iloveyou28
+ChromeDriverVersion=78.0.3904.70
 Environment=https\://linkedin.com
-PREV_TXT=20190917_144817.txt
-TITLE2=QA
+TITLE2=
+PREV_TXT=20191127_152452.txt
+TITLE1=
 DefaultTimeoutInSeconds=15
 Driver=chrome
-TITLE1=QA
