--- a/src/main/resources/default.properties
+++ b/src/main/resources/default.properties
@@ -3,7 +3,7 @@ Environment = https://linkedin.com
 EnvType = dev
 Driver = chrome
 DefaultTimeoutInSeconds = 30
-ChromeDriverVersion=76.0.3809.126
+ChromeVersion=103
 
 AppLogin = olex.dyachuk@gmail.com
 AppPassword = WtkmLink1!
