--- a/default.properties
+++ b/default.properties
@@ -1,17 +1,17 @@
 #Saved
-#Wed Nov 27 15:37:30 EET 2019
+#Tue Dec 13 17:06:57 EET 2022
+CONTACTS=
+PREV_TXT=20221213_170507.txt
+Driver=chrome
+DefaultTimeoutInSeconds=15
 EnvType=dev
-CONTACTS=Oleg Nastagunin
-COMPANIES=
-LOGIN=bohdan.hrynchuk@fortegrp.com
-TITLE=
-PREV_HTML=20191127_152452.csv
-Headless=false
-PASS=Iloveyou28
-ChromeDriverVersion=78.0.3904.70
+ChromeVersion=108
+PASS=
+PREV_HTML=20221213_170507.csv
 Environment=https\://linkedin.com
 TITLE2=
-PREV_TXT=20191127_152452.txt
-TITLE1=
-DefaultTimeoutInSeconds=15
-Driver=chrome
+COMPANIES=
+LOGIN=oleksandr.diachuk@fortegrp.com
+TITLE=
+Headless=false
+TITLE1=VP
