install errors fixing

--- a/default.properties
+++ b/default.properties
@@ -11,7 +11,7 @@ PREV_HTML=20221213_170507.csv
 Environment=https\://linkedin.com
 TITLE2=
 COMPANIES=
-LOGIN=oleksandr.diachuk@fortegrp.com
+LOGIN=eugenegrp@fortegrp.com
 TITLE=
 Headless=false
-TITLE1=VP
+TITLE1=recruiter
