install errors fixing

--- a/default.properties
+++ b/default.properties
@@ -1,17 +1,17 @@
 #Saved
-#Tue Dec 13 17:06:57 EET 2022
-CONTACTS=
-PREV_TXT=20221213_170507.txt
-Driver=chrome
-DefaultTimeoutInSeconds=15
+#Thu Apr 06 23:54:29 CEST 2023
 EnvType=dev
-ChromeVersion=108
-PASS=
-PREV_HTML=20221213_170507.csv
-Environment=https\://linkedin.com
-TITLE2=
+CONTACTS=
 COMPANIES=
 LOGIN=eugenegrp@fortegrp.com
 TITLE=
+ChromeVersion=111
+PREV_HTML=20230406_234105.csv
 Headless=false
-TITLE1=recruiter
+PASS=
+Environment=https\://linkedin.com
+TITLE2=
+PREV_TXT=20230406_234105.txt
+TITLE1=qa
+Driver=chrome
+DefaultTimeoutInSeconds=15
