--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,22 @@
         <artifactId>webdrivermanager</artifactId>
         <version>5.2.0</version>
     </dependency>
+
+    <dependency>
+        <groupId>com.google.api-client</groupId>
+        <artifactId>google-api-client</artifactId>
+        <version>1.33.1</version>
+    </dependency>
+    <dependency>
+        <groupId>com.google.oauth-client</groupId>
+        <artifactId>google-oauth-client-jetty</artifactId>
+        <version>1.33.0</version>
+    </dependency>
+    <dependency>
+        <groupId>com.google.apis</groupId>
+        <artifactId>google-api-services-sheets</artifactId>
+        <version>v4-rev20210629-1.32.1</version>
+    </dependency>
 </dependencies>
 
 
